# OpenEval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  alembic.ini  app.py  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tasks.md
.github/workflows/: unit-tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_reasoning_and_response_format.py  003_add_containers_table.py  004_add_custom_graders.py  005_add_config_tags.py  006_add_readonly_flag.py  007_add_comparer_weights.py  008_add_schedules.py  008_unified_graders.py  009_add_schedules.py  010_add_data_sources_and_import_presets.py  011_add_skip_ssl_verify.py  012_add_dataset_csv_content.py  013_ensure_dataset_csv_utf8mb4.py  014_add_run_error_message.py  014_ensure_eval_results_utf8mb4.py  015_add_run_heartbeat_and_result_uniqueness.py  015_ensure_eval_results_utf8mb4.py  016_add_run_heartbeat_and_result_uniqueness.py  017_add_mapped_input_translation_cache.py  017_expand_eval_config_system_prompt.py  018_expand_eval_config_system_prompt.py  019_add_eval_config_comment.py
app/: __init__.py  main.py
docs/ai/: scheduled-runs-and-slack.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  globals.css  main.tsx
frontend/tests/: configGraders.test.ts  openaiModels.test.ts  remoteImportExplorer.helpers.test.ts  resultStatus.test.ts  runDetailSorting.test.ts  runDetailTranslations.test.ts  translateRowsSequentially.test.ts  translatedPageRows.test.ts
misc/: Large DCR Golden Test Cases.csv  NTQ - GPT 5 prompt.csv  Small DCR Golden Test Cases copy.csv  Small DCR Golden Test Cases.csv  Taxonomy 2026-Feb.csv  contact-reason-schema.json  dcr-5.2-prompt.md  sample-dataset.csv  sample-prompt.md  sample-schema.json
skills/: api-routing.md  frontend-conventions.md  git-workflow.md  kiss-yagni.md  python-code-quality.md  testing-strategy.md  ui-design.md
src/: app.py  config.py
src/ai_eval/: __init__.py  app.py  config.py
src/comparers/: base.py  custom_grader.py  exact_match.py  json_field_match.py  json_schema_match.py  llm_judge.py  pattern_match.py  python_grader.py  registry.py  semantic_similarity.py  string_check_grader.py  template_utils.py
src/db/: create_database.py  models.py  repositories.py  session.py
src/open_eval/: __init__.py  app.py  config.py
src/providers/: openai.py
src/routers/: __init__.py  configs.py  containers.py  dashboard.py  data_sources.py  datasets.py  generate_schema.py  playground.py  runs.py  schedules.py  vector_stores.py
src/services/: __init__.py  csv_export.py  csv_parser.py  data_source_crypto.py  data_source_duplicates.py  dataset_imports.py  dataset_storage.py  error_monitoring.py  eval_client.py  eval_runner.py  mapped_row_translation.py  openai_client.py  remote_data_sources.py  remote_mapping.py  run_monitor.py  scheduler.py  slack_notifier.py
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html
templates/configs/: detail.html  edit.html  list.html  new.html
templates/datasets/: detail.html  list.html  new.html
templates/runs/: compare.html  detail.html  list.html  new.html
templates/vector_stores/: detail.html  list.html  new.html
tests/: conftest.py  test_alembic_migrations.py  test_app_module.py  test_comparer_weights.py  test_config.py  test_config_comments.py  test_config_grader_thresholds.py  test_config_tags.py  test_data_sources.py  test_duplicate_config.py  test_eval_runner.py  test_exports.py  test_json_schema_grader_configs.py  test_list_pagination.py  test_openai_provider.py  test_run_durability.py  test_schedules.py  test_spa_serving.py
tests/comparers/: test_custom_grader.py  test_json_field_match.py  test_json_schema_match.py  test_python_grader.py  test_string_check_grader.py  test_template_utils.py
tests/db/: test_models.py  test_session.py
(+180 files in other folders)
