[project]
name = "openeval"
version = "0.1.0"
description = "AI prompt & tool evaluation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "python-multipart",
    "httpx",
    "openai",
    "pydantic-settings",
    "apscheduler>=3.10",
    "croniter>=2.0",
]

[project.scripts]
openeval = "src.app:create_app"

[project.entry-points."open_eval.comparers"]
exact_match = "src.comparers.exact_match:ExactMatchComparer"
pattern_match = "src.comparers.pattern_match:PatternMatchComparer"
semantic_similarity = "src.comparers.semantic_similarity:SemanticSimilarityComparer"
llm_judge = "src.comparers.llm_judge:LlmJudgeComparer"
json_schema_match = "src.comparers.json_schema_match:JsonSchemaMatchComparer"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
